src/components/StickyHeader/style.scss
@import '../../inc.scss';

.stickyHeader {
    position: relative;

    &-header {
        position: sticky;
        z-index: $zIndex-floatingHeader;
        top: $header-height;

        @include flex(row);
        justify-content: space-between;
        align-items: center;

        width: 100%;
        background: #ffffff;
        padding: 4px 1rem;

        &::after {
            content: '';
            display: block;
            position: absolute;
            top: 100%;
            left: 0;

            @include size(100%, 5px);

            background: linear-gradient(to bottom, rgba(0, 0, 0, .1), transparent);
        }
    }

    &__empty &--header {
        display: none;
    }

    $scroll-open-duration: 1s;
    &__collapsable {
        & .stickyHeader-header {
            cursor: pointer;

            &::before {
                @include size(24px);

                content: '';
                display: block;
                position: absolute;

                background: url('data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" style="width:24px;height:24px" viewBox="0 0 24 24"%3E%3Cpath fill="currentColor" d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" /%3E%3C/svg%3E');

                transition: transform #{$scroll-open-duration / 2} ease-out;
            }

            &--left {
                // icon size + left padding of header
                padding-left: 24px + 16px;
            }
        }

        & .stickyHeader-content {
            max-height: 0;
            transition: max-height $scroll-open-duration ease-out;
            overflow: hidden;
        }
    }

    &__uncollapsed {
        & .stickyHeader-header {
            &::before {
                transform: rotate(90deg);
            }
        }

        & .stickyHeader-content {
            max-height: var(--content-height, 100px * 20);
        }
    }
}

